# easy-rewriting

./: .gitignore  ChangeLog.md  README.md  default.nix  easy-rewriting.cabal  shell.nix
examples/Examples/: AbstractSyntax.hs  Arithmetic.hs  Function.hs  Monad.hs  Trivial.hs
src/: EasyRewriting.hs
src/EasyRewriting/: Check.hs  Rewrite.hs
test/: Spec.hs
